--- a/src/App.css
+++ b/src/App.css
@@ -36,13 +36,12 @@ body {
 .corrent {
     width: 100%;
     height: 100%;
-    background-color: rgb(255, 255, 255);
-    border-radius: 20px;
 }
 
 .right-bar {
-    background-color: rgb(255, 255, 255);
-    border-radius: 20px;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
     min-width: 350px;
 }
 
