--- a/src/views/common/section.css
+++ b/src/views/common/section.css
@@ -1,4 +1,7 @@
-.section {
+section {
     background-color: white;
     border-radius: 10px;
+    padding: 20px;
+    width: 100%;
+    box-sizing: border-box;
 }
