--- a/front/src/views/corrent/dashboard/dashboard.css
+++ b/front/src/views/corrent/dashboard/dashboard.css
@@ -1,5 +1,12 @@
 .dashboard { 
     display: flex;
+    gap: 20px;
+    width: 100%;
+    height: 100%;
+}
+
+.dashboard .content-list {
+    display: flex;
     flex-direction: column;
     gap: 20px;
     width: 100%;
